Nutch Change Log

Release 2.1 - Current Development

* NUTCH-1431 Introduce link 'distance' and add configurable max distance in the generator (ferdy)

* NUTCH-1448 Redirected urls should be handled more cleanly (more like an outlink url) (ferdy)

* NUTCH-1463 Elasticsearch indexer should wait and check response for last flush (ferdy)

* NUTCH-1462 Elasticsearch not indexing when type==null in NutchDocument metadata (ferdy)

* NUTCH-1395 Show batchId when skipping within ParserJob (lewismc)

* NUTCH-1365 Fix crawlId functionalilty by making using of new gora configuration (ferdy)

* NUTCH-1442 indexingfilter.order is property is misread in code (ferdy via lewismc)

* NUTCH-1450 Upgrade to gora deps to 0.2.1 (lewismc)

* NUTCH-1159 Write JUnit test for index-anchor (ferdy + lewismc)

* NUTCH-1445 Add ElasticIndexerJob that indexes to elasticsearch (ferdy)

* NUTCH-1444 Indexing should not create temporary files (do not extend from FileOutputFormat) (ferdy)

* NUTCH-1443 Solr schema version is invalid (markus)

* NUTCH-1441 AnchorIndexingFilter should use plain HashSet (ferdy)

* NUTCH-1417 Remove o.a.n.metadata.Office (lewismc)

* NUTCH-1376 add ant description parameters (lewismc)

* NUTCH-1440 reconfigure non-existent stopwords_en.txt in schema-solr4.xml (shekhar sharma via lewismc)

* NUTCH-1439 Define boost field as type float in schema-solr4.xml (shekhar sharma via lewismc)

* NUTCH-1438 ParserJob support for option -reparse (ferdy)

* NUTCH-1437 HostInjectorJob to accept lines with or without protocol (ferdy)

* NUTCH-1435 Host jobs throw NullPointerException with MySQL (ferdy via lewismc)

* NUTCH-1428 GeneratorMapper should not initialize filters/normalizers when they are disabled (ferdy)

* NUTCH-1427 Reuse SelectorEntry in Generator. (ferdy)

* NUTCH-1411 nutchgora fetcher.store.content does not work (Alexander Kingson via ferdy) 

* NUTCH-1426 HostDb close() should close store instead of flush (ferdy)
